@@ -59,6 +59,10 @@
 | 🧽
 | Add `--wait` and `--no-wait` to service delete operation. Change service delete to wait by default.   
 | https://github.com/knative/client/pull/682[#682]
+
+| 🎁
+| Add `--user` flag for specifying the user id to run the container
+| https://github.com/knative/client/pull/679[#679]
 |===
 
 ## v0.12.0 (2020-01-29)
